# socialapi

./: README.md  compose.yml  docker-compose.yml  insomnia_export.json
api/: .env  Cargo.toml  Dockerfile
api/migrations/2023-07-26-215915_create_story/: down.sql  up.sql
api/src/: main.rs  schema.rs
api/src/controllers/: comment.rs  mod.rs  story.rs  user.rs
api/src/models/: comment.rs  mod.rs  story.rs  user.rs  user_story.rs
api/src/respository/: comment.rs  mod.rs  story.rs  user.rs
api/src/routes/: comment.rs  mod.rs  story.rs  user.rs
api/src/services/: mod.rs  notifcations.rs
