[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.176", features = ["derive"] }
serde_json = "1.0.104"
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
log = "0.4"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.18", features = ["multipart"]}
notify-rust = "4"